--- a/crds/deploy.yaml
+++ b/crds/deploy.yaml
@@ -24,8 +24,10 @@ spec:
     spec:
       containers:
         - name: podtato
-          image: podtato:0.0.1
-          # forces use of local image 
+          image: podtato:0.0.2
+          # replace entry point, we can exec into pod and try to 
+          # run program and see what happens, examine environment, filesystem, etc
+          command: ["tail", "-f", "/dev/null"]   
           imagePullPolicy: Never 
     
 
