--- a/crds/deploy.yaml
+++ b/crds/deploy.yaml
@@ -24,12 +24,19 @@ spec:
     spec:
       containers:
         - name: podtato
-          image: podtato:0.0.2  
+          image: podtato-debug:0.0.1  
           imagePullPolicy: Never 
           env:
-          - name: PORT
+          - name: "PORT"
             value: "8080"
-    
+          volumeMounts:
+          - mountPath: /go/src
+            name: source-code
+      volumes:
+      - name: source-code
+        hostPath:
+          path: /home/jam/go/src
+          type: Directory    
 
 ---
 
@@ -46,4 +53,17 @@ spec:
     port: 8080
     targetPort: 8080
 
+---
 
+apiVersion: v1
+kind: Service
+metadata:
+  name: debug
+  namespace: demo
+spec:
+  selector:
+    app: podtato
+  ports:
+  - name: debug
+    port: 30123
+    targetPort: 30123
